cpp/test/FreezeScript/dbmap/fail/19_new.ice
module Test
{

local class C {};

};
